=======================================================================
   This file contains a high-level summary of changes between recent
   stable releases of Type-Tiny. For a more detailed list, including
   changes in development releases, see the "Changes" file instead.
=======================================================================

2019-11-12 Type-Tiny version 1.006000 released!

 - Improved is_subtype_of/is_supertype_of support.
 - ArrayRef array length parameter.
 - Eval::TypeTiny's API is now considered to be stable.
 - Slurpy HashRefs passed to coderefs returned by Type::Params can now
   be true hashrefs.
 - More import options for Type::Library

2019-12-11 Type-Tiny version 1.008000 released!

 - Resolved all bugs from RT.
 - Completed everything on TODO.
 - Rewrite of the manual.
 - Lots more test cases.
 - wrap_methods/wrap_subs in Type::Params.