@@ -10,7 +10,7 @@ BEGIN {
 
 BEGIN {
 	$Error::TypeTiny::Assertion::AUTHORITY = 'cpan:TOBYINK';
-	$Error::TypeTiny::Assertion::VERSION   = '1.007_014';
+	$Error::TypeTiny::Assertion::VERSION   = '1.007_015';
 }
 
 $Error::TypeTiny::Assertion::VERSION =~ tr/_//d;
