@@ -6,7 +6,7 @@ use warnings;
 
 BEGIN {
 	$Type::Coercion::FromMoose::AUTHORITY = 'cpan:TOBYINK';
-	$Type::Coercion::FromMoose::VERSION   = '1.007_014';
+	$Type::Coercion::FromMoose::VERSION   = '1.007_015';
 }
 
 $Type::Coercion::FromMoose::VERSION =~ tr/_//d;
