@@ -6,7 +6,7 @@ use warnings;
 
 BEGIN {
 	$Type::Registry::AUTHORITY = 'cpan:TOBYINK';
-	$Type::Registry::VERSION   = '1.007_014';
+	$Type::Registry::VERSION   = '1.007_015';
 }
 
 $Type::Registry::VERSION =~ tr/_//d;
