@@ -15,8 +15,10 @@
 
 2019-12-11 Type-Tiny version 1.008000 released!
 
+ - Type::Tiny has a website. <http://typetiny.toby.ink/>
  - Resolved all bugs from RT.
  - Completed everything on TODO.
  - Rewrite of the manual.
  - Lots more test cases.
  - wrap_methods/wrap_subs in Type::Params.
+
